# task-manager_makerstudio

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  schema.rs  server.rs  utility.rs
src/routes/: mod.rs
src/routes/task_routes/: create_task.rs  delete_task.rs  get_task.rs  list_task.rs  mod.rs  update_task.rs
src/routes/user_routes/: create_user.rs  delete_user.rs  mod.rs
