[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"


[lib]
name = "task_manager"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.7.0"
actix-web = "4.6.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.0", features = ["v4", "serde"] }
